--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-leaflet/core": "^3.0.0",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
