--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-google-maps/api": "^2.20.6",
     "@react-leaflet/core": "^3.0.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.14",
@@ -26,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
